# codyclaw

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.yaml.template  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
codyclaw/: config.py  db.py  main.py
codyclaw/automation/: boot.py  cron.py  events.py
codyclaw/channel/: base.py  cards.py  dedup.py  lark_impl.py
codyclaw/gateway/: dispatcher.py  router.py  session_strategy.py  tools.py  user_memory.py
codyclaw/skills/cron-manager/: SKILL.md
codyclaw/skills/feishu-notify/: SKILL.md
codyclaw/skills/skill-creator/: SKILL.md
codyclaw/skills/user-memory/: SKILL.md
codyclaw/web/: api.py
codyclaw/web/static/: app.js  index.html  style.css
docs/: TECH_DESIGN.md
tests/: test_dedup.py  test_router.py  test_session.py
